@@ -34,6 +34,7 @@ import static org.apache.solr.common.cloud.ZkStateReader.PROPERTY_VALUE_PROP;
 import static org.apache.solr.common.cloud.ZkStateReader.REPLICATION_FACTOR;
 import static org.apache.solr.common.cloud.ZkStateReader.REPLICA_PROP;
 import static org.apache.solr.common.cloud.ZkStateReader.SHARD_ID_PROP;
+import static org.apache.solr.common.params.CollectionAdminParams.CALLING_LOCK_ID_HEADER;
 import static org.apache.solr.common.params.CollectionAdminParams.COLLECTION;
 import static org.apache.solr.common.params.CollectionAdminParams.CREATE_NODE_SET_PARAM;
 import static org.apache.solr.common.params.CollectionAdminParams.FOLLOW_ALIASES;
@@ -100,13 +101,14 @@ import static org.apache.solr.common.params.CommonParams.TIMING;
 import static org.apache.solr.common.params.CommonParams.VALUE_LONG;
 import static org.apache.solr.common.params.CoreAdminParams.BACKUP_LOCATION;
 import static org.apache.solr.common.params.CoreAdminParams.BACKUP_REPOSITORY;
+import static org.apache.solr.common.params.CoreAdminParams.SHARD_BACKUP_ID;
 import static org.apache.solr.common.util.StrUtils.formatString;
 
 import java.lang.invoke.MethodHandles;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
+import java.util.HashMap;
 import java.util.Iterator;
 import java.util.LinkedHashMap;
 import java.util.List;
@@ -138,6 +140,7 @@ import org.apache.solr.cloud.OverseerTaskQueue;
 import org.apache.solr.cloud.OverseerTaskQueue.QueueEvent;
 import org.apache.solr.cloud.ZkController;
 import org.apache.solr.cloud.ZkController.NotInClusterStateException;
+import org.apache.solr.cloud.api.collections.AdminCmdContext;
 import org.apache.solr.cloud.api.collections.CollectionHandlingUtils;
 import org.apache.solr.cloud.api.collections.DistributedCollectionConfigSetCommandRunner;
 import org.apache.solr.cloud.api.collections.ReindexCollectionCmd;
@@ -161,6 +164,7 @@ import org.apache.solr.common.params.SolrParams;
 import org.apache.solr.common.util.NamedList;
 import org.apache.solr.common.util.Pair;
 import org.apache.solr.common.util.SimpleOrderedMap;
+import org.apache.solr.common.util.StrUtils;
 import org.apache.solr.common.util.Utils;
 import org.apache.solr.core.CloudConfig;
 import org.apache.solr.core.CoreContainer;
@@ -243,7 +247,9 @@ public class CollectionsHandler extends RequestHandlerBase implements Permission
     if (action == null) return PermissionNameProvider.Name.COLL_READ_PERM;
     CollectionParams.CollectionAction collectionAction =
         CollectionParams.CollectionAction.get(action);
-    if (collectionAction == null) return null;
+    if (collectionAction == null) {
+      throw new SolrException(SolrException.ErrorCode.BAD_REQUEST, "Unknown action: " + action);
+    }
     return collectionAction.isWrite
         ? PermissionNameProvider.Name.COLL_EDIT_PERM
         : PermissionNameProvider.Name.COLL_READ_PERM;
@@ -315,17 +321,13 @@ public class CollectionsHandler extends RequestHandlerBase implements Permission
       return;
     }
 
-    String asyncId = req.getParams().get(ASYNC);
-    if (asyncId != null) {
-      props.put(ASYNC, asyncId);
-    }
-
-    props.put(QUEUE_OPERATION, operation.action.toLower());
+    AdminCmdContext adminCmdContext =
+        new AdminCmdContext(operation.action, req.getParams().get(ASYNC), req);
 
     ZkNodeProps zkProps = new ZkNodeProps(props);
     final SolrResponse overseerResponse;
 
-    overseerResponse = submitCollectionApiCommand(zkProps, operation.action, operation.timeOut);
+    overseerResponse = submitCollectionApiCommand(adminCmdContext, zkProps, operation.timeOut);
 
     rsp.getValues().addAll(overseerResponse.getResponse());
     Exception exp = overseerResponse.getException();
@@ -338,13 +340,13 @@ public class CollectionsHandler extends RequestHandlerBase implements Permission
 
   public static long DEFAULT_COLLECTION_OP_TIMEOUT = 180 * 1000;
 
-  public SolrResponse submitCollectionApiCommand(ZkNodeProps m, CollectionAction action)
+  public SolrResponse submitCollectionApiCommand(AdminCmdContext adminCmdContext, ZkNodeProps m)
       throws KeeperException, InterruptedException {
-    return submitCollectionApiCommand(m, action, DEFAULT_COLLECTION_OP_TIMEOUT);
+    return submitCollectionApiCommand(adminCmdContext, m, DEFAULT_COLLECTION_OP_TIMEOUT);
   }
 
   public static SolrResponse submitCollectionApiCommand(
-      ZkController zkController, ZkNodeProps m, CollectionAction action, long timeout)
+      ZkController zkController, AdminCmdContext adminCmdContext, ZkNodeProps m, long timeout)
       throws KeeperException, InterruptedException {
     // Collection API messages are either sent to Overseer and processed there, or processed
     // locally. Distributing Collection API implies we're also distributing Cluster State Updates.
@@ -359,14 +361,20 @@ public class CollectionsHandler extends RequestHandlerBase implements Permission
     Optional<DistributedCollectionConfigSetCommandRunner> distribCommandRunner =
         zkController.getDistributedCommandRunner();
     if (distribCommandRunner.isPresent()) {
-      return distribCommandRunner.get().runCollectionCommand(m, action, timeout);
+      return distribCommandRunner.get().runCollectionCommand(adminCmdContext, m, timeout);
     } else { // Sending the Collection API message to Overseer via a Zookeeper queue
-      String operation = m.getStr(QUEUE_OPERATION);
-      if (operation == null) {
-        throw new SolrException(ErrorCode.BAD_REQUEST, "missing key " + QUEUE_OPERATION);
+      String operation = adminCmdContext.getAction().lowerName;
+      HashMap<String, Object> additionalProps = new HashMap<>();
+      additionalProps.put(QUEUE_OPERATION, operation);
+      if (adminCmdContext.getAsyncId() != null && !adminCmdContext.getAsyncId().isBlank()) {
+        additionalProps.put(ASYNC, adminCmdContext.getAsyncId());
       }
-      if (m.get(ASYNC) != null) {
-        String asyncId = m.getStr(ASYNC);
+      if (StrUtils.isNotBlank(adminCmdContext.getCallingLockId())) {
+        additionalProps.put(CALLING_LOCK_ID_HEADER, adminCmdContext.getCallingLockId());
+      }
+      m = m.plus(additionalProps);
+      if (adminCmdContext.getAsyncId() != null) {
+        String asyncId = adminCmdContext.getAsyncId();
         NamedList<Object> r = new NamedList<>();
 
         if (zkController.claimAsyncId(asyncId)) {
@@ -389,7 +397,7 @@ public class CollectionsHandler extends RequestHandlerBase implements Permission
           throw new SolrException(
               BAD_REQUEST, "Task with the same requestid already exists. (" + asyncId + ")");
         }
-        r.add(CoreAdminParams.REQUESTID, m.get(ASYNC));
+        r.add(CoreAdminParams.REQUESTID, asyncId);
 
         return new OverseerSolrResponse(r);
       }
@@ -424,9 +432,9 @@ public class CollectionsHandler extends RequestHandlerBase implements Permission
   }
 
   public SolrResponse submitCollectionApiCommand(
-      ZkNodeProps m, CollectionAction action, long timeout)
+      AdminCmdContext adminCmdContext, ZkNodeProps m, long timeout)
       throws KeeperException, InterruptedException {
-    return submitCollectionApiCommand(coreContainer.getZkController(), m, action, timeout);
+    return submitCollectionApiCommand(coreContainer.getZkController(), adminCmdContext, m, timeout);
   }
 
   private boolean overseerCollectionQueueContains(String asyncId)
@@ -1061,6 +1069,8 @@ public class CollectionsHandler extends RequestHandlerBase implements Permission
           reqBody.async = req.getParams().get(ASYNC);
           reqBody.repository = req.getParams().get(BACKUP_REPOSITORY);
           reqBody.location = req.getParams().get(BACKUP_LOCATION);
+          reqBody.name = req.getParams().get(NAME);
+          reqBody.shardBackupId = req.getParams().get(SHARD_BACKUP_ID);
 
           final InstallShardData installApi = new InstallShardData(h.coreContainer, req, rsp);
           final SolrJerseyResponse installResponse =
@@ -1407,7 +1417,6 @@ public class CollectionsHandler extends RequestHandlerBase implements Permission
   /** Copy all params to the given map or if the given map is null create a new one */
   static Map<String, Object> copy(
       SolrParams source, Map<String, Object> sink, String... paramNames) {
-    return copy(
-        source, sink, paramNames == null ? Collections.emptyList() : Arrays.asList(paramNames));
+    return copy(source, sink, paramNames == null ? List.of() : Arrays.asList(paramNames));
   }
 }
