@@ -18,9 +18,9 @@ package org.apache.solr.request;
 
 import io.opentelemetry.api.trace.Span;
 import java.security.Principal;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import org.apache.solr.client.solrj.SolrRequest;
 import org.apache.solr.cloud.CloudDescriptor;
 import org.apache.solr.common.params.CommonParams;
 import org.apache.solr.common.params.SolrParams;
@@ -30,6 +30,7 @@ import org.apache.solr.common.util.EnvUtils;
 import org.apache.solr.core.CoreContainer;
 import org.apache.solr.core.SolrCore;
 import org.apache.solr.response.QueryResponseWriter;
+import org.apache.solr.response.ResponseWritersRegistry;
 import org.apache.solr.schema.IndexSchema;
 import org.apache.solr.search.SolrIndexSearcher;
 import org.apache.solr.servlet.HttpSolrCall;
@@ -45,7 +46,6 @@ public interface SolrQueryRequest extends AutoCloseable {
   /** This is the system property for {@link #ALLOW_PARTIAL_RESULTS_DEFAULT} */
   String SOLR_ALLOW_PARTIAL_RESULTS_DEFAULT = "solr.allowPartialResultsDefault";
 
-  // silly getBoolean doesn't take a default.
   /**
    * Users can set {@link SolrQueryRequest#SOLR_ALLOW_PARTIAL_RESULTS_DEFAULT} system property to
    * true, and solr will omit results when any shard fails due query execution limits (time, cpu
@@ -116,17 +116,17 @@ public interface SolrQueryRequest extends AutoCloseable {
   /** The index searcher associated with this request */
   SolrIndexSearcher getSearcher();
 
-  /** The solr core (coordinator, etc) associated with this request */
+  /** The solr core (coordinator, etc.) associated with this request */
   SolrCore getCore();
 
   /** The schema snapshot from core.getLatestSchema() at request creation. */
-  public IndexSchema getSchema();
+  IndexSchema getSchema();
 
   /** Replaces the current schema snapshot with the latest from the core. */
-  public void updateSchemaToLatest();
+  void updateSchemaToLatest();
 
   /** Returns a string representing all the important parameters. Suitable for logging. */
-  public String getParamString();
+  String getParamString();
 
   /**
    * Returns any associated JSON (or null if none) in deserialized generic form. Java classes used
@@ -144,11 +144,11 @@ public interface SolrQueryRequest extends AutoCloseable {
 
   /**
    * Only for V2 API. Returns a map of path segments and their values. For example, if the path is
-   * configured as /path/{segment1}/{segment2} and a reguest is made as /path/x/y the returned map
+   * configured as /path/{segment1}/{segment2} and a request is made as /path/x/y the returned map
    * would contain {segment1:x ,segment2:y}
    */
   default Map<String, String> getPathTemplateValues() {
-    return Collections.emptyMap();
+    return Map.of();
   }
 
   /**
@@ -158,11 +158,11 @@ public interface SolrQueryRequest extends AutoCloseable {
    * @param validateInput , If true it is validated against the json schema spec
    */
   default List<CommandOperation> getCommands(boolean validateInput) {
-    return Collections.emptyList();
+    return List.of();
   }
 
   default String getHttpMethod() {
-    return (String) getContext().get("httpMethod");
+    return ((SolrRequest.METHOD) getContext().get("httpMethod")).name();
   }
 
   default HttpSolrCall getHttpSolrCall() {
@@ -186,25 +186,20 @@ public interface SolrQueryRequest extends AutoCloseable {
     return core == null ? null : core.getCoreContainer();
   }
 
-  /**
-   * @deprecated use getCore().getCoreDescriptor().getCloudDescriptor()
-   */
-  @Deprecated
+  /** The CloudDescriptor, which may be different from that of the core on the coordinator. */
   default CloudDescriptor getCloudDescriptor() {
     return getCore().getCoreDescriptor().getCloudDescriptor();
   }
 
-  /** The writer to use for this request, considering {@link CommonParams#WT}. Never null. */
+  /**
+   * The writer to use for this request, considering {@link CommonParams#WT}. Never null.
+   *
+   * <p>If a core is available, uses the core's response writer registry. If no core is available
+   * (e.g., for node/container requests), uses a minimal set of node/container-appropriate writers.
+   */
   default QueryResponseWriter getResponseWriter() {
     // it's weird this method is here instead of SolrQueryResponse, but it's practical/convenient
-    SolrCore core = getCore();
-    String wt = getParams().get(CommonParams.WT);
-    if (core != null) {
-      return core.getQueryResponseWriter(wt);
-    } else {
-      return SolrCore.DEFAULT_RESPONSE_WRITERS.getOrDefault(
-          wt, SolrCore.DEFAULT_RESPONSE_WRITERS.get("standard"));
-    }
+    return ResponseWritersRegistry.getWriter(getParams().get(CommonParams.WT), getCore());
   }
 
   /**
