@@ -17,9 +17,6 @@
 
 package org.apache.solr.cloud;
 
-import static java.nio.charset.StandardCharsets.UTF_8;
-
-import com.codahale.metrics.Metric;
 import java.io.IOException;
 import java.lang.invoke.MethodHandles;
 import java.util.ArrayList;
@@ -29,16 +26,8 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.stream.Collectors;
-import org.apache.http.HttpEntity;
-import org.apache.http.client.methods.HttpEntityEnclosingRequestBase;
-import org.apache.http.client.methods.HttpPost;
-import org.apache.http.entity.ByteArrayEntity;
-import org.apache.http.entity.ContentType;
-import org.apache.http.util.EntityUtils;
 import org.apache.solr.client.api.model.MigrateReplicasRequestBody;
 import org.apache.solr.client.solrj.SolrClient;
-import org.apache.solr.client.solrj.impl.CloudLegacySolrClient;
 import org.apache.solr.client.solrj.impl.CloudSolrClient;
 import org.apache.solr.client.solrj.request.CollectionAdminRequest;
 import org.apache.solr.client.solrj.request.CoreAdminRequest;
@@ -49,9 +38,12 @@ import org.apache.solr.common.cloud.Slice;
 import org.apache.solr.common.cloud.ZkStateReader;
 import org.apache.solr.common.util.StrUtils;
 import org.apache.solr.common.util.Utils;
+import org.apache.solr.core.CoreContainer;
+import org.apache.solr.core.SolrInfoBean;
 import org.apache.solr.embedded.JettySolrRunner;
-import org.apache.solr.metrics.MetricsMap;
-import org.apache.solr.metrics.SolrMetricManager;
+import org.apache.solr.util.SolrMetricTestUtils;
+import org.eclipse.jetty.client.BytesRequestContent;
+import org.eclipse.jetty.client.HttpClient;
 import org.junit.Before;
 import org.junit.BeforeClass;
 import org.junit.Test;
@@ -124,7 +116,6 @@ public class MigrateReplicasTest extends SolrCloudTestCase {
     log.info("excluded_node : {}  ", emptyNode);
     Map<?, ?> response =
         callMigrateReplicas(
-            cloudClient,
             new MigrateReplicasRequestBody(
                 Set.of(nodeToBeDecommissioned), Set.of(emptyNode), true, null));
     assertEquals(
@@ -145,14 +136,13 @@ public class MigrateReplicasTest extends SolrCloudTestCase {
     collection = cloudClient.getClusterState().getCollectionOrNull(coll, false);
     log.debug("### After decommission: {}", collection);
     // check what are replica states on the decommissioned node
-    assertNull(
+    assertTrue(
         "There should not be any replicas left on decommissioned node",
-        collection.getReplicasOnNode(nodeToBeDecommissioned));
+        collection.getReplicasOnNode(nodeToBeDecommissioned).isEmpty());
 
     // let's do it back - this time wait for recoveries
     response =
         callMigrateReplicas(
-            cloudClient,
             new MigrateReplicasRequestBody(
                 Set.of(emptyNode), Set.of(nodeToBeDecommissioned), true, null));
     assertEquals(
@@ -184,17 +174,14 @@ public class MigrateReplicasTest extends SolrCloudTestCase {
     }
     // make sure all newly created replicas on node are active
     List<Replica> newReplicas = collection.getReplicasOnNode(nodeToBeDecommissioned);
-    assertNotNull("There should be replicas on the migrated-to node", newReplicas);
     assertFalse("There should be replicas on the migrated-to node", newReplicas.isEmpty());
     for (Replica r : newReplicas) {
       assertEquals(r.toString(), Replica.State.ACTIVE, r.getState());
     }
     // make sure all replicas on emptyNode are not active
     List<Replica> replicas = collection.getReplicasOnNode(emptyNode);
-    if (replicas != null) {
-      for (Replica r : replicas) {
-        assertNotEquals(r.toString(), Replica.State.ACTIVE, r.getState());
-      }
+    for (Replica r : replicas) {
+      assertNotEquals(r.toString(), Replica.State.ACTIVE, r.getState());
     }
 
     // check replication metrics on this jetty - see SOLR-14924
@@ -203,37 +190,27 @@ public class MigrateReplicasTest extends SolrCloudTestCase {
         // No cores on this node, ignore it
         continue;
       }
-      SolrMetricManager metricManager = jetty.getCoreContainer().getMetricManager();
-      String registryName = null;
-      for (String name : metricManager.registryNames()) {
-        if (name.startsWith("solr.core.")) {
-          registryName = name;
+
+      CoreContainer coreContainer = jetty.getCoreContainer();
+      List<String> coreNames = jetty.getCoreContainer().getAllCoreNames();
+      for (String coreName : coreNames) {
+        try (var core = coreContainer.getCore(coreName)) {
+          var dp =
+              SolrMetricTestUtils.getGaugeDatapoint(
+                  core,
+                  "solr_core_replication_is_replicating",
+                  SolrMetricTestUtils.newCloudLabelsBuilder(core)
+                      .label("category", SolrInfoBean.Category.REPLICATION.toString())
+                      .label("handler", "/replication")
+                      .build());
+          if (dp == null) continue;
+
+          double isReplicating = dp.getValue();
+          assertTrue(
+              "solr_core_replication_is_replicating should be 0 or 1, got: " + isReplicating,
+              isReplicating == 0.0 || isReplicating == 1.0);
         }
       }
-      Map<String, Metric> metrics = metricManager.registry(registryName).getMetrics();
-      if (!metrics.containsKey("REPLICATION./replication.fetcher")) {
-        continue;
-      }
-      MetricsMap fetcherGauge =
-          (MetricsMap)
-              ((SolrMetricManager.GaugeWrapper<?>) metrics.get("REPLICATION./replication.fetcher"))
-                  .getGauge();
-      assertNotNull("no IndexFetcher gauge in metrics", fetcherGauge);
-      Map<String, Object> value = fetcherGauge.getValue();
-      if (value.isEmpty()) {
-        continue;
-      }
-      assertNotNull("isReplicating missing: " + value, value.get("isReplicating"));
-      assertTrue(
-          "isReplicating should be a boolean: " + value,
-          value.get("isReplicating") instanceof Boolean);
-      if (value.get("indexReplicatedAt") == null) {
-        continue;
-      }
-      assertNotNull("timesIndexReplicated missing: " + value, value.get("timesIndexReplicated"));
-      assertTrue(
-          "timesIndexReplicated should be a number: " + value,
-          value.get("timesIndexReplicated") instanceof Number);
     }
   }
 
@@ -271,15 +248,10 @@ public class MigrateReplicasTest extends SolrCloudTestCase {
 
     DocCollection initialCollection = cloudClient.getClusterState().getCollection(coll);
     log.info("### Before decommission: {}", initialCollection);
-    List<Integer> initialReplicaCounts =
-        l.stream()
-            .map(node -> initialCollection.getReplicasOnNode(node).size())
-            .collect(Collectors.toList());
     Map<?, ?> response =
         callMigrateReplicas(
-            cloudClient,
             new MigrateReplicasRequestBody(
-                new HashSet<>(nodesToBeDecommissioned), Collections.emptySet(), true, null));
+                new HashSet<>(nodesToBeDecommissioned), Set.of(), true, null));
     assertEquals(
         "MigrateReplicas request was unsuccessful",
         0L,
@@ -291,13 +263,9 @@ public class MigrateReplicasTest extends SolrCloudTestCase {
     // check what are replica states on the decommissioned nodes
     for (String nodeToBeDecommissioned : nodesToBeDecommissioned) {
       List<Replica> replicas = collection.getReplicasOnNode(nodeToBeDecommissioned);
-      if (replicas == null) {
-        replicas = Collections.emptyList();
-      }
-      assertEquals(
+      assertTrue(
           "There should be no more replicas on the sourceNode after a migrateReplicas request.",
-          Collections.emptyList(),
-          replicas);
+          replicas.isEmpty());
     }
 
     for (String node : eventualTargetNodes) {
@@ -326,9 +294,7 @@ public class MigrateReplicasTest extends SolrCloudTestCase {
 
     String liveNode = cloudClient.getClusterState().getLiveNodes().iterator().next();
     Map<?, ?> response =
-        callMigrateReplicas(
-            cloudClient,
-            new MigrateReplicasRequestBody(Set.of(liveNode), Collections.emptySet(), true, null));
+        callMigrateReplicas(new MigrateReplicasRequestBody(Set.of(liveNode), Set.of(), true, null));
     assertNotNull(
         "No error in response, when the request should have failed", response.get("error"));
     assertEquals(
@@ -337,37 +303,29 @@ public class MigrateReplicasTest extends SolrCloudTestCase {
         ((Map<?, ?>) response.get("error")).get("msg"));
   }
 
-  public Map<?, ?> callMigrateReplicas(CloudSolrClient cloudClient, MigrateReplicasRequestBody body)
-      throws IOException {
-    HttpEntityEnclosingRequestBase httpRequest = null;
-    HttpEntity entity;
-    String response = null;
-    Map<?, ?> r = null;
-
-    String uri =
-        cluster.getJettySolrRunners().get(0).getBaseURLV2().toString()
-            + "/cluster/replicas/migrate";
+  public Map<?, ?> callMigrateReplicas(MigrateReplicasRequestBody body) throws IOException {
+    String rspStr = null;
+    var jetty = cluster.getRandomJetty(random());
+    HttpClient httpClient = jetty.getSolrClient().getHttpClient();
     try {
-      httpRequest = new HttpPost(uri);
-
-      httpRequest.setEntity(
-          new ByteArrayEntity(
-              Utils.toJSON(Utils.getReflectWriter(body)), ContentType.APPLICATION_JSON));
-      httpRequest.setHeader("Accept", "application/json");
-      entity =
-          ((CloudLegacySolrClient) cloudClient).getHttpClient().execute(httpRequest).getEntity();
-      try {
-        response = EntityUtils.toString(entity, UTF_8);
-        r = (Map<?, ?>) Utils.fromJSONString(response);
-        assertNotNull("No response given from MigrateReplicas API", r);
-        assertNotNull("No responseHeader given from MigrateReplicas API", r.get("responseHeader"));
-      } catch (JSONParser.ParseException e) {
-        log.error("err response: {}", response);
-        throw new AssertionError(e);
-      }
-    } finally {
-      httpRequest.releaseConnection();
+      var rsp =
+          httpClient
+              .POST(jetty.getBaseURLV2() + "/cluster/replicas/migrate")
+              .body(
+                  new BytesRequestContent(
+                      "application/json", Utils.toJSON(Utils.getReflectWriter(body))))
+              .send();
+      rspStr = rsp.getContentAsString();
+      var rspMap = (Map<?, ?>) Utils.fromJSONString(rspStr);
+      assertNotNull("No response given from MigrateReplicas API", rspMap);
+      assertNotNull(
+          "No responseHeader given from MigrateReplicas API", rspMap.get("responseHeader"));
+      return rspMap;
+    } catch (JSONParser.ParseException e) {
+      log.error("err response: {}", rspStr);
+      throw new AssertionError(e);
+    } catch (Exception e) {
+      throw new IOException(e);
     }
-    return r;
   }
 }
