@@ -25,11 +25,12 @@ import static org.apache.solr.filestore.TestDistribFileStore.checkAllNodesForFil
 import static org.apache.solr.filestore.TestDistribFileStore.readFile;
 import static org.apache.solr.filestore.TestDistribFileStore.uploadKey;
 
+import java.io.ByteArrayInputStream;
 import java.io.FileOutputStream;
 import java.io.IOException;
+import java.io.InputStream;
 import java.nio.ByteBuffer;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
@@ -42,16 +43,14 @@ import org.apache.lucene.analysis.core.WhitespaceTokenizerFactory;
 import org.apache.lucene.analysis.pattern.PatternReplaceCharFilterFactory;
 import org.apache.lucene.util.ResourceLoader;
 import org.apache.lucene.util.ResourceLoaderAware;
+import org.apache.solr.client.solrj.RemoteSolrException;
 import org.apache.solr.client.solrj.SolrClient;
-import org.apache.solr.client.solrj.SolrQuery;
 import org.apache.solr.client.solrj.SolrRequest;
 import org.apache.solr.client.solrj.SolrServerException;
-import org.apache.solr.client.solrj.impl.BaseHttpSolrClient;
-import org.apache.solr.client.solrj.impl.HttpClientUtil;
-import org.apache.solr.client.solrj.impl.HttpSolrClient;
 import org.apache.solr.client.solrj.request.CollectionAdminRequest;
 import org.apache.solr.client.solrj.request.GenericSolrRequest;
 import org.apache.solr.client.solrj.request.RequestWriter;
+import org.apache.solr.client.solrj.request.SolrQuery;
 import org.apache.solr.client.solrj.request.UpdateRequest;
 import org.apache.solr.client.solrj.request.V2Request;
 import org.apache.solr.client.solrj.request.beans.PackagePayload;
@@ -65,6 +64,7 @@ import org.apache.solr.common.annotation.JsonProperty;
 import org.apache.solr.common.params.MapSolrParams;
 import org.apache.solr.common.params.ModifiableSolrParams;
 import org.apache.solr.common.params.SolrParams;
+import org.apache.solr.common.util.JavaBinCodec;
 import org.apache.solr.common.util.ReflectMapWriter;
 import org.apache.solr.common.util.Utils;
 import org.apache.solr.core.SolrCore;
@@ -82,6 +82,8 @@ import org.apache.solr.security.AuthorizationContext;
 import org.apache.solr.util.LogLevel;
 import org.apache.solr.util.plugin.SolrCoreAware;
 import org.apache.zookeeper.data.Stat;
+import org.eclipse.jetty.client.ContentResponse;
+import org.eclipse.jetty.client.HttpClient;
 import org.junit.After;
 import org.junit.Before;
 import org.junit.Test;
@@ -107,7 +109,6 @@ public class TestPackages extends SolrCloudTestCase {
     if (cluster != null) {
       cluster.shutdown();
     }
-    System.clearProperty("solr.packages.enabled");
 
     super.tearDown();
   }
@@ -139,7 +140,7 @@ public class TestPackages extends SolrCloudTestCase {
         new V2Request.Builder("/cluster/package")
             .forceV2(true)
             .withMethod(SolrRequest.METHOD.POST)
-            .withPayload(Collections.singletonMap("add", add))
+            .withPayload(Map.of("add", add))
             .build();
 
     req.process(cluster.getSolrClient());
@@ -220,7 +221,7 @@ public class TestPackages extends SolrCloudTestCase {
         new V2Request.Builder("/cluster/package")
             .forceV2(true)
             .withMethod(SolrRequest.METHOD.POST)
-            .withPayload(Collections.singletonMap("add", add))
+            .withPayload(Map.of("add", add))
             .build();
 
     req.process(cluster.getSolrClient());
@@ -410,7 +411,7 @@ public class TestPackages extends SolrCloudTestCase {
         new V2Request.Builder("/cluster/package")
             .withMethod(SolrRequest.METHOD.POST)
             .forceV2(true)
-            .withPayload(Collections.singletonMap("delete", delVersion))
+            .withPayload(Map.of("delete", delVersion))
             .build();
     delete.process(cluster.getSolrClient());
 
@@ -531,15 +532,16 @@ public class TestPackages extends SolrCloudTestCase {
       Utils.InputStreamConsumer<?> parser,
       Map<String, Object> expected)
       throws Exception {
-    try (HttpSolrClient client = (HttpSolrClient) jetty.newClient()) {
-      TestDistribFileStore.assertResponseValues(
-          10,
-          () ->
-              NavigableObject.wrap(
-                  HttpClientUtil.executeGET(
-                      client.getHttpClient(), jetty.getBaseUrl() + uri, parser)),
-          expected);
-    }
+    HttpClient httpClient = jetty.getSolrClient().getHttpClient();
+    TestDistribFileStore.assertResponseValues(
+        10,
+        () -> {
+          ContentResponse rsp = httpClient.GET(jetty.getBaseUrl() + uri);
+          try (InputStream is = new ByteArrayInputStream(rsp.getContent())) {
+            return NavigableObject.wrap(parser.accept(is));
+          }
+        },
+        expected);
   }
 
   private void verifyComponent(
@@ -579,7 +581,7 @@ public class TestPackages extends SolrCloudTestCase {
   @Test
   @SuppressWarnings("unchecked")
   public void testAPI() throws Exception {
-    String errPath = "/error/details[0]/errorMessages[0]";
+    String errPath = "/details[0]/errorMessages[0]";
     String FILE1 = "/mypkg/v.0.12/jar_a.jar";
     String FILE2 = "/mypkg/v.0.12/jar_b.jar";
     String FILE3 = "/mypkg/v.0.13/jar_a.jar";
@@ -592,7 +594,7 @@ public class TestPackages extends SolrCloudTestCase {
         new V2Request.Builder("/cluster/package")
             .forceV2(true)
             .withMethod(SolrRequest.METHOD.POST)
-            .withPayload(Collections.singletonMap("add", add))
+            .withPayload(Map.of("add", add))
             .build();
 
     // the files are not yet there. The command should fail with error saying "No such file"
@@ -601,7 +603,7 @@ public class TestPackages extends SolrCloudTestCase {
     // post the jar file. No signature is sent
     postFileAndWait(cluster, "runtimecode/runtimelibs.jar.bin", FILE1, null);
 
-    add.files = Collections.singletonList(FILE1);
+    add.files = List.of(FILE1);
     expectError(req, cluster.getSolrClient(), errPath, FILE1 + " has no signature");
     // now we upload the keys
     byte[] derFile = readFile("cryptokeys/pub_key512.der");
@@ -614,7 +616,7 @@ public class TestPackages extends SolrCloudTestCase {
         "L3q/qIGs4NaF6JiO0ZkMUFa88j0OmYc+I6O7BOdNuMct/xoZ4h73aZHZGc0+nmI1f/U3bOlMPINlSOM6LK3JpQ==");
     // with correct signature
     // after uploading the file, let's delete the keys to see if we get proper error message
-    add.files = Collections.singletonList(FILE2);
+    add.files = List.of(FILE2);
     /*expectError(req, cluster.getSolrClient(), errPath,
     "ZooKeeper does not have any public keys");*/
 
@@ -629,8 +631,7 @@ public class TestPackages extends SolrCloudTestCase {
         1,
         () ->
             NavigableObject.wrap(
-                Utils.fromJSON(
-                    cluster.getZkClient().getData(SOLR_PKGS_PATH, null, new Stat(), true))),
+                Utils.fromJSON(cluster.getZkClient().getData(SOLR_PKGS_PATH, null, new Stat()))),
         Map.of(":packages:test_pkg[0]:version", "0.12", ":packages:test_pkg[0]:files[0]", FILE2));
 
     // post a new jar with a proper signature
@@ -643,7 +644,7 @@ public class TestPackages extends SolrCloudTestCase {
     // this time we are adding the second version of the package (0.13)
     add.version = "0.13";
     add.pkg = "test_pkg";
-    add.files = Collections.singletonList(FILE3);
+    add.files = List.of(FILE3);
 
     // this request should succeed
     req.process(cluster.getSolrClient());
@@ -652,8 +653,7 @@ public class TestPackages extends SolrCloudTestCase {
         1,
         () ->
             NavigableObject.wrap(
-                Utils.fromJSON(
-                    cluster.getZkClient().getData(SOLR_PKGS_PATH, null, new Stat(), true))),
+                Utils.fromJSON(cluster.getZkClient().getData(SOLR_PKGS_PATH, null, new Stat()))),
         Map.of(":packages:test_pkg[1]:version", "0.13", ":packages:test_pkg[1]:files[0]", FILE3));
 
     // Now we will just delete one version
@@ -664,7 +664,7 @@ public class TestPackages extends SolrCloudTestCase {
         new V2Request.Builder("/cluster/package")
             .forceV2(true)
             .withMethod(SolrRequest.METHOD.POST)
-            .withPayload(Collections.singletonMap("delete", delVersion))
+            .withPayload(Map.of("delete", delVersion))
             .build();
 
     // we are expecting an error
@@ -677,8 +677,7 @@ public class TestPackages extends SolrCloudTestCase {
         1,
         () ->
             NavigableObject.wrap(
-                Utils.fromJSON(
-                    cluster.getZkClient().getData(SOLR_PKGS_PATH, null, new Stat(), true))),
+                Utils.fromJSON(cluster.getZkClient().getData(SOLR_PKGS_PATH, null, new Stat()))),
         Map.of(":packages:test_pkg[0]:version", "0.13", ":packages:test_pkg[0]:files[0]", FILE3));
 
     // So far we have been verifying the details with  ZK directly
@@ -690,11 +689,9 @@ public class TestPackages extends SolrCloudTestCase {
           new Callable<NavigableObject>() {
             @Override
             public NavigableObject call() throws Exception {
-              try (HttpSolrClient solrClient = (HttpSolrClient) jetty.newClient()) {
-                return (NavigableObject)
-                    HttpClientUtil.executeGET(
-                        solrClient.getHttpClient(), path, Utils.JAVABINCONSUMER);
-              }
+              HttpClient solrClient = jetty.getSolrClient().getHttpClient();
+              byte[] bytes = solrClient.GET(path).getContent();
+              return (NavigableObject) new JavaBinCodec().unmarshal(bytes);
             }
           },
           Map.of(
@@ -774,7 +771,7 @@ public class TestPackages extends SolrCloudTestCase {
         new V2Request.Builder("/cluster/package")
             .forceV2(true)
             .withMethod(SolrRequest.METHOD.POST)
-            .withPayload(Collections.singletonMap("add", add))
+            .withPayload(Map.of("add", add))
             .build();
     req.process(cluster.getSolrClient());
 
@@ -816,7 +813,7 @@ public class TestPackages extends SolrCloudTestCase {
         new V2Request.Builder("/cluster/package")
             .forceV2(true)
             .withMethod(SolrRequest.METHOD.POST)
-            .withPayload(Collections.singletonMap("add", add))
+            .withPayload(Map.of("add", add))
             .build();
     req.process(cluster.getSolrClient());
 
@@ -877,8 +874,11 @@ public class TestPackages extends SolrCloudTestCase {
     try {
       req.process(client);
       fail("should have failed with message : " + expectErrorMsg);
-    } catch (BaseHttpSolrClient.RemoteExecutionException e) {
-      String msg = Objects.requireNonNullElse(e.getMetaData()._getStr(errPath), "");
+    } catch (RemoteSolrException e) {
+      String msg =
+          Objects.requireNonNullElse(
+                  Utils.getObjectByPath(e.getRemoteErrorObject(), false, errPath), "")
+              .toString();
       assertTrue(
           "should have failed with message: " + expectErrorMsg + "actual message : " + msg,
           msg.contains(expectErrorMsg));
