@@ -19,7 +19,8 @@ package org.apache.solr.search;
 
 import java.io.StringWriter;
 import java.util.Arrays;
-import java.util.Collections;
+import java.util.List;
+import java.util.Map;
 import java.util.Objects;
 import org.apache.lucene.document.Document;
 import org.apache.lucene.index.IndexableField;
@@ -27,7 +28,6 @@ import org.apache.lucene.misc.document.LazyDocument;
 import org.apache.solr.SolrTestCaseJ4;
 import org.apache.solr.common.util.XML;
 import org.apache.solr.schema.IndexSchema;
-import org.junit.AfterClass;
 import org.junit.BeforeClass;
 import org.junit.Test;
 
@@ -54,7 +54,7 @@ public class LargeFieldTest extends SolrTestCaseJ4 {
     IndexSchema schema = h.getCore().getLatestSchema();
     schema =
         schema.addFieldTypes(
-            Collections.singletonList(
+            List.of(
                 schema.newFieldType(
                     "textType",
                     "solr.TextField", // redundant; TODO improve api
@@ -71,16 +71,10 @@ public class LargeFieldTest extends SolrTestCaseJ4 {
             Arrays.asList(
                 schema.newField(LAZY_FIELD, "textType", map()),
                 schema.newField(BIG_FIELD, "textType", map("large", true))),
-            Collections.emptyMap(),
+            Map.of(),
             PERSIST_FALSE);
 
     h.getCore().setLatestSchema(schema);
-  }
-
-  @AfterClass
-  public static void afterClass() {
-    System.clearProperty("documentCache.enabled");
-    System.clearProperty("enableLazyFieldLoading");
   }
 
   @Test
