@@ -20,9 +20,9 @@ package org.apache.solr.search;
 import java.io.IOException;
 import java.nio.file.Path;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
+import java.util.List;
 import java.util.Map;
 import org.apache.commons.io.file.PathUtils;
 import org.apache.solr.SolrTestCaseJ4;
@@ -32,8 +32,8 @@ import org.apache.solr.common.params.ModifiableSolrParams;
 import org.apache.solr.common.params.SolrParams;
 import org.apache.solr.core.SolrCore;
 import org.apache.solr.handler.component.ResponseBuilder;
-import org.apache.solr.request.LocalSolrQueryRequest;
 import org.apache.solr.request.SolrQueryRequest;
+import org.apache.solr.request.SolrQueryRequestBase;
 import org.apache.solr.response.SolrQueryResponse;
 import org.apache.solr.update.AddUpdateCommand;
 import org.apache.solr.update.CommitUpdateCommand;
@@ -76,8 +76,7 @@ public class SignificantTermsQParserPluginTest extends SolrTestCaseJ4 {
     RefCounted<SolrIndexSearcher> searcher = emptyCore.getSearcher();
     try {
       DelegatingCollector analyticsCollector =
-          query.getAnalyticsCollector(
-              new ResponseBuilder(null, resp, Collections.emptyList()), searcher.get());
+          query.getAnalyticsCollector(new ResponseBuilder(null, resp, List.of()), searcher.get());
       assertNotNull(analyticsCollector);
       analyticsCollector.complete();
       LinkedHashMap<String, Object> expectedValues = new LinkedHashMap<>();
@@ -106,7 +105,7 @@ public class SignificantTermsQParserPluginTest extends SolrTestCaseJ4 {
     AnalyticsQuery query = (AnalyticsQuery) parser.parse();
     SolrQueryResponse resp = new SolrQueryResponse();
 
-    ResponseBuilder responseBuilder = new ResponseBuilder(null, resp, Collections.emptyList());
+    ResponseBuilder responseBuilder = new ResponseBuilder(null, resp, List.of());
     RefCounted<SolrIndexSearcher> searcher = dataCore.getSearcher();
     try {
 
@@ -132,7 +131,7 @@ public class SignificantTermsQParserPluginTest extends SolrTestCaseJ4 {
   }
 
   private void addTestDocs(SolrCore core) throws IOException {
-    SolrQueryRequest coreReq = new LocalSolrQueryRequest(core, new ModifiableSolrParams());
+    SolrQueryRequest coreReq = new SolrQueryRequestBase(core, new ModifiableSolrParams());
     AddUpdateCommand cmd = new AddUpdateCommand(coreReq);
     cmd.solrDoc = new SolrInputDocument();
     cmd.solrDoc.addField("id", "1");
@@ -144,7 +143,7 @@ public class SignificantTermsQParserPluginTest extends SolrTestCaseJ4 {
   }
 
   private void deleteTestDocs(SolrCore core) throws IOException {
-    SolrQueryRequest coreReq = new LocalSolrQueryRequest(core, new ModifiableSolrParams());
+    SolrQueryRequest coreReq = new SolrQueryRequestBase(core, new ModifiableSolrParams());
     DeleteUpdateCommand cmd = new DeleteUpdateCommand(coreReq);
     cmd.id = "1";
     core.getUpdateHandler().delete(cmd);
