@@ -17,8 +17,6 @@
 
 package org.apache.solr.client.solrj.impl;
 
-import static org.apache.solr.client.solrj.SolrClient.RemoteSolrException;
-
 import java.io.IOException;
 import java.lang.invoke.MethodHandles;
 import java.net.MalformedURLException;
@@ -30,8 +28,11 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.concurrent.Executors;
+import java.util.concurrent.ScheduledExecutorService;
 import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
+import org.apache.solr.client.solrj.RemoteSolrException;
 import org.apache.solr.client.solrj.SolrClient;
 import org.apache.solr.client.solrj.SolrRequest.METHOD;
 import org.apache.solr.client.solrj.SolrServerException;
@@ -46,30 +47,38 @@ import org.apache.solr.common.params.ModifiableSolrParams;
 import org.apache.solr.common.util.CollectionUtil;
 import org.apache.solr.common.util.EnvUtils;
 import org.apache.solr.common.util.SimpleOrderedMap;
+import org.apache.solr.common.util.SolrNamedThreadFactory;
 import org.apache.solr.common.util.URLUtil;
-import org.apache.solr.common.util.Utils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 public abstract class BaseHttpClusterStateProvider implements ClusterStateProvider {
   private static final Logger log = LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
 
+  protected static final String SYS_PROP_CACHE_TIMEOUT_SECONDS = "solr.solrj.cache.timeout.sec";
+
   private String urlScheme;
   private List<URL> configuredNodes;
   volatile Set<String> liveNodes; // initially null then never null
-  long liveNodesTimestamp = 0;
+  volatile long liveNodesTimestamp = 0;
   volatile Map<String, List<String>> aliases;
   volatile Map<String, Map<String, String>> aliasProperties;
   long aliasesTimestamp = 0;
 
   // the liveNodes and aliases cache will be invalidated after 5 secs
-  private int cacheTimeout = EnvUtils.getPropertyAsInteger("solr.solrj.cache.timeout.sec", 5);
+  private int cacheTimeout = EnvUtils.getPropertyAsInteger(SYS_PROP_CACHE_TIMEOUT_SECONDS, 5);
 
-  protected void initConfiguredNodes(List<String> solrUrls) throws Exception {
+  volatile boolean liveNodeReloadingScheduled = false;
+  private final ScheduledExecutorService liveNodeReloadingService =
+      Executors.newSingleThreadScheduledExecutor(
+          new SolrNamedThreadFactory("liveNodeReloadingExecutor"));
+
+  protected void initConfiguredNodes(List<String> solrUrls) {
     this.configuredNodes =
         solrUrls.stream()
             .map(BaseHttpClusterStateProvider::stringToUrl)
             .collect(Collectors.toList());
+    this.urlScheme = this.configuredNodes.get(0).getProtocol();
   }
 
   private static URL stringToUrl(String solrUrl) {
@@ -98,14 +107,14 @@ public abstract class BaseHttpClusterStateProvider implements ClusterStateProvid
   @Override
   public ClusterState.CollectionRef getState(String collection) {
     for (String nodeName : getLiveNodes()) {
-      String baseUrl = Utils.getBaseUrlForNodeName(nodeName, urlScheme);
+      String baseUrl = URLUtil.getBaseUrlForNodeName(nodeName, urlScheme);
       try (SolrClient client = getSolrClient(baseUrl)) {
         DocCollection docCollection = fetchCollectionState(client, collection);
         return new ClusterState.CollectionRef(docCollection);
       } catch (SolrServerException | IOException e) {
         log.warn(
             "Attempt to fetch cluster state from {} failed.",
-            Utils.getBaseUrlForNodeName(nodeName, urlScheme),
+            URLUtil.getBaseUrlForNodeName(nodeName, urlScheme),
             e);
       } catch (RemoteSolrException e) {
         if ("NOT_FOUND".equals(e.getMetadata("CLUSTERSTATUS"))) {
@@ -213,25 +222,50 @@ public abstract class BaseHttpClusterStateProvider implements ClusterStateProvid
   }
 
   @Override
-  public synchronized Set<String> getLiveNodes() {
-    // synchronized because there's no value in multiple doing this at the same time
+  public Set<String> getLiveNodes() {
+    // Use cached liveNodes if cached and still valid
+    if (liveNodes == null
+        || (TimeUnit.SECONDS.convert((System.nanoTime() - liveNodesTimestamp), TimeUnit.NANOSECONDS)
+            > getCacheTimeout())) {
+      // Do synchronized fetch when there is no cached value or the cached value is expired
+      fetchLiveNodes(false);
+    }
+    return liveNodes;
+  }
+
+  private synchronized void fetchLiveNodes(boolean force) {
+    if (!liveNodeReloadingScheduled) {
+      // Method is synchronized, so this is safe
+      liveNodeReloadingScheduled = true;
+      long liveNodeReloadDelayMs = (1000L * getCacheTimeout()) / 2;
+      liveNodeReloadingService.scheduleWithFixedDelay(
+          () -> fetchLiveNodes(true),
+          liveNodeReloadDelayMs,
+          liveNodeReloadDelayMs,
+          TimeUnit.MILLISECONDS);
+    }
 
     // only in the initial state, liveNodes is null
     if (liveNodes != null) {
-      if (TimeUnit.SECONDS.convert((System.nanoTime() - liveNodesTimestamp), TimeUnit.NANOSECONDS)
-          <= getCacheTimeout()) {
-        return this.liveNodes; // cached copy is fresh enough
+      // Don't use the cached value if force is enabled
+      if (!force
+          && TimeUnit.SECONDS.convert(
+                  (System.nanoTime() - liveNodesTimestamp), TimeUnit.NANOSECONDS)
+              <= getCacheTimeout()) {
+        // Check the cached value again, as the live nodes might have been updated while blocked on
+        // synchronization
+        return; // cached copy is fresh enough
       }
 
       if (liveNodes.stream()
           .map(node -> URLUtil.getBaseUrlForNodeName(node, urlScheme))
           .map(BaseHttpClusterStateProvider::stringToUrl)
-          .anyMatch(this::updateLiveNodes)) return this.liveNodes;
+          .anyMatch(this::updateLiveNodes)) return;
 
       log.warn("Failed fetching live_nodes from {}. Trying configured nodes...", liveNodes);
     }
 
-    if (configuredNodes.stream().anyMatch(this::updateLiveNodes)) return this.liveNodes;
+    if (configuredNodes.stream().anyMatch(this::updateLiveNodes)) return;
 
     throw new RuntimeException(
         "Failed fetching live_nodes from "
@@ -280,9 +314,8 @@ public abstract class BaseHttpClusterStateProvider implements ClusterStateProvid
         || TimeUnit.SECONDS.convert((System.nanoTime() - aliasesTimestamp), TimeUnit.NANOSECONDS)
             > getCacheTimeout()) {
       for (String nodeName : getLiveNodes()) {
-        String baseUrl = Utils.getBaseUrlForNodeName(nodeName, urlScheme);
+        String baseUrl = URLUtil.getBaseUrlForNodeName(nodeName, urlScheme);
         try (SolrClient client = getSolrClient(baseUrl)) {
-
           CollectionAdminResponse response =
               new CollectionAdminRequest.ListAliases().process(client);
           this.aliases = response.getAliasesAsLists();
@@ -296,8 +329,8 @@ public abstract class BaseHttpClusterStateProvider implements ClusterStateProvid
                 "LISTALIASES not found, possibly using older Solr server. Aliases won't work {}",
                 "unless you upgrade Solr server",
                 e);
-            this.aliases = Collections.emptyMap();
-            this.aliasProperties = Collections.emptyMap();
+            this.aliases = Map.of();
+            this.aliasProperties = Map.of();
             this.aliasesTimestamp = System.nanoTime();
             return aliases;
           }
@@ -321,13 +354,13 @@ public abstract class BaseHttpClusterStateProvider implements ClusterStateProvid
   @Override
   public Map<String, String> getAliasProperties(String alias) {
     getAliases(false);
-    return Collections.unmodifiableMap(aliasProperties.getOrDefault(alias, Collections.emptyMap()));
+    return Collections.unmodifiableMap(aliasProperties.getOrDefault(alias, Map.of()));
   }
 
   @Override
   public ClusterState getClusterState() {
     for (String nodeName : getLiveNodes()) {
-      String baseUrl = Utils.getBaseUrlForNodeName(nodeName, urlScheme);
+      String baseUrl = URLUtil.getBaseUrlForNodeName(nodeName, urlScheme);
       try (SolrClient client = getSolrClient(baseUrl)) {
         return fetchClusterState(client);
       } catch (SolrServerException | RemoteSolrException | IOException e) {
@@ -353,7 +386,7 @@ public abstract class BaseHttpClusterStateProvider implements ClusterStateProvid
   @Override
   public Map<String, Object> getClusterProperties() {
     for (String nodeName : getLiveNodes()) {
-      String baseUrl = Utils.getBaseUrlForNodeName(nodeName, urlScheme);
+      String baseUrl = URLUtil.getBaseUrlForNodeName(nodeName, urlScheme);
       try (SolrClient client = getSolrClient(baseUrl)) {
         SimpleOrderedMap<?> cluster =
             submitClusterStateRequest(client, null, ClusterStateRequestType.FETCH_CLUSTER_PROP);
@@ -401,6 +434,21 @@ public abstract class BaseHttpClusterStateProvider implements ClusterStateProvid
       return null;
     }
     return String.join(",", this.liveNodes);
+  }
+
+  @Override
+  public boolean isClosed() {
+    return liveNodeReloadingService.isShutdown();
+  }
+
+  @Override
+  public void close() throws IOException {
+    liveNodeReloadingService.shutdown();
+  }
+
+  @Override
+  public String getUrlScheme() {
+    return this.urlScheme;
   }
 
   private enum ClusterStateRequestType {
