@@ -22,7 +22,6 @@ import java.io.IOException;
 import java.io.OutputStream;
 import java.nio.file.Path;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.Map;
 import java.util.Properties;
 import org.apache.solr.client.solrj.SolrRequest;
@@ -207,7 +206,7 @@ public abstract class ConfigSetAdminRequest<
 
     @Override
     public Collection<ContentStream> getContentStreams() throws IOException {
-      return Collections.singletonList(stream);
+      return java.util.List.of(stream);
     }
 
     @Override
