@@ -21,7 +21,7 @@ import static org.apache.solr.client.solrj.SolrRequest.METHOD.POST;
 import static org.apache.solr.common.params.CollectionAdminParams.PER_REPLICA_STATE;
 
 import java.lang.invoke.MethodHandles;
-import java.util.Collections;
+import java.util.Map;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicBoolean;
 import org.apache.solr.client.solrj.SolrClient;
@@ -95,7 +95,7 @@ public class PerReplicaStatesIntegrationTest extends SolrCloudTestCase {
       assertEquals(5, prs.states.size());
 
       // Test delete replica
-      Replica leader = c.getReplica((s, replica) -> replica.isLeader());
+      Replica leader = c.getReplicas().stream().filter(Replica::isLeader).findFirst().orElseThrow();
       CollectionAdminRequest.deleteReplica(testCollection, leader.shard, leader.getName())
           .process(cluster.getSolrClient());
       cluster.waitForActiveCollection(testCollection, 2, 4);
@@ -193,8 +193,7 @@ public class PerReplicaStatesIntegrationTest extends SolrCloudTestCase {
                 Utils.fromJSON(
                     SolrCloudTestCase.cluster
                         .getZkClient()
-                        .getData(
-                            DocCollection.getCollectionPath(testCollection), null, null, true)));
+                        .getData(DocCollection.getCollectionPath(testCollection), null, null)));
 
         assertNull(
             rsp._get(
@@ -246,8 +245,7 @@ public class PerReplicaStatesIntegrationTest extends SolrCloudTestCase {
               DocCollection.getCollectionPath(COLL), cluster.getZkClient(), null);
       log.info("prs1 : {}", prs1);
 
-      CollectionAdminRequest.modifyCollection(
-              COLL, Collections.singletonMap(PER_REPLICA_STATE, "false"))
+      CollectionAdminRequest.modifyCollection(COLL, Map.of(PER_REPLICA_STATE, "false"))
           .process(cluster.getSolrClient());
       waitForState(
           "Waiting for PRS property",
@@ -256,8 +254,7 @@ public class PerReplicaStatesIntegrationTest extends SolrCloudTestCase {
           TimeUnit.SECONDS,
           collectionState ->
               "false".equals(collectionState.getProperties().get(PER_REPLICA_STATE)));
-      CollectionAdminRequest.modifyCollection(
-              COLL, Collections.singletonMap(PER_REPLICA_STATE, "true"))
+      CollectionAdminRequest.modifyCollection(COLL, Map.of(PER_REPLICA_STATE, "true"))
           .process(cluster.getSolrClient());
       waitForState(
           "Waiting for PRS property",
@@ -300,7 +297,7 @@ public class PerReplicaStatesIntegrationTest extends SolrCloudTestCase {
       Stat stat = null;
       CollectionAdminRequest.createCollection(NONPRS_COLL, "conf", 10, 1)
           .process(cluster.getSolrClient());
-      stat = cluster.getZkClient().exists(DocCollection.getCollectionPath(NONPRS_COLL), null, true);
+      stat = cluster.getZkClient().exists(DocCollection.getCollectionPath(NONPRS_COLL), null);
       log.info("");
       // the actual number can vary depending on batching
       assertTrue(stat.getVersion() >= 2);
@@ -310,7 +307,7 @@ public class PerReplicaStatesIntegrationTest extends SolrCloudTestCase {
           .setPerReplicaState(Boolean.TRUE)
           .process(cluster.getSolrClient());
       String PRS_PATH = DocCollection.getCollectionPath(PRS_COLL);
-      stat = cluster.getZkClient().exists(PRS_PATH, null, true);
+      stat = cluster.getZkClient().exists(PRS_PATH, null);
       // +1 after all replica are added with on state.json write to CreateCollectionCmd.setData()
       assertEquals(1, stat.getVersion());
       // For each replica:
@@ -325,7 +322,7 @@ public class PerReplicaStatesIntegrationTest extends SolrCloudTestCase {
           CollectionAdminRequest.addReplicaToShard(PRS_COLL, "shard1")
               .process(cluster.getSolrClient());
       cluster.waitForActiveCollection(PRS_COLL, 10, 11);
-      stat = cluster.getZkClient().exists(PRS_PATH, null, true);
+      stat = cluster.getZkClient().exists(PRS_PATH, null);
       // For the new replica:
       // +2 for state.json overseer writes, even though there's no longer PRS updates from
       // overseer, current code would still do a "TOUCH" on the PRS entry
@@ -345,7 +342,7 @@ public class PerReplicaStatesIntegrationTest extends SolrCloudTestCase {
       CollectionAdminRequest.deleteReplica(PRS_COLL, "shard1", addedReplica.getName())
           .process(cluster.getSolrClient());
       cluster.waitForActiveCollection(PRS_COLL, 10, 10);
-      stat = cluster.getZkClient().exists(PRS_PATH, null, true);
+      stat = cluster.getZkClient().exists(PRS_PATH, null);
       // For replica deletion
       // +1 for ZkController#unregister, which delete the PRS entry from data node
       // overseer, current code would still do a "TOUCH" on the PRS entry
@@ -354,7 +351,7 @@ public class PerReplicaStatesIntegrationTest extends SolrCloudTestCase {
       for (JettySolrRunner j : cluster.getJettySolrRunners()) {
         j.stop();
         j.start(true);
-        stat = cluster.getZkClient().exists(PRS_PATH, null, true);
+        stat = cluster.getZkClient().exists(PRS_PATH, null);
         // ensure restart does not update the state.json, after addReplica/deleteReplica, 2 more
         // updates hence at version 3 on state.json version
         assertEquals(3, stat.getVersion());
@@ -372,11 +369,11 @@ public class PerReplicaStatesIntegrationTest extends SolrCloudTestCase {
 
       // wait for the new replica to be active
       cluster.waitForActiveCollection(PRS_COLL, 10, 11);
-      stat = cluster.getZkClient().exists(PRS_PATH, null, true);
+      stat = cluster.getZkClient().exists(PRS_PATH, null);
       // +1 for a new replica
       assertEquals(4, stat.getVersion());
       DocCollection c = cluster.getZkStateReader().getCollection(PRS_COLL);
-      Replica newreplica = c.getReplica((s, replica) -> replica.node.equals(j2.getNodeName()));
+      Replica newreplica = c.getReplicasOnNode(j2.getNodeName()).getFirst();
 
       // let's stop the old leader
       JettySolrRunner oldJetty = cluster.getReplicaJetty(leader);
@@ -394,7 +391,7 @@ public class PerReplicaStatesIntegrationTest extends SolrCloudTestCase {
                       .get(newreplica.name)
                       .isLeader);
       PerReplicaStates prs = PerReplicaStatesOps.fetch(PRS_PATH, cluster.getZkClient(), null);
-      stat = cluster.getZkClient().exists(PRS_PATH, null, true);
+      stat = cluster.getZkClient().exists(PRS_PATH, null);
       // the version should not have updated
       assertEquals(4, stat.getVersion());
     } finally {
